python/ql/test/2/query-tests/Imports/syntax_error/test.py
print("Hello World", file=sys.stdout)
